# cognition

./: .gitignore  Dockerfile  README.md  pyproject.toml  report.md
.github/workflows/: publish.local.yml  publish.yml
config/: crew.yaml
scripts/: bump_version.py  release.py
src/cognition/: __init__.py  api.py  cognition.py  crew.py  llm.py  logger.py  main.py
src/cognition/config/: agents.yaml  memory.yaml  tools.yaml
src/cognition/lib/config/: agents.yaml  memory.yaml  tasks.yaml
src/cognition/service/: config_service.py  memory.md  provider_base.py
src/cognition/service/memory/: entity.py  long_term.py  mem_svc.py  short_term.py
src/cognition/svc/: config.md  config_service.py  mem0.md  mem0_service.py  memory_service.py
src/cognition/tools/: tool_svc.py
test/: test_config_service.py
