[project]
name = "cognition"
version = "0.1.0"
description = "cognition using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "langchain-community>=0.0.27",
    "chromadb>=0.4.0",
    "package-name @ git+https://github.com/username/repository.git", # Add your Git repo here            # For vector storage
]

[project.scripts]
cognition = "cognition.main:run"
run_crew = "cognition.main:run"
train = "cognition.main:train"
replay = "cognition.main:replay"
test = "cognition.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
