[project]
name = "cognition"
dynamic = ["version"]
description = "cognition using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "langchain-community>=0.0.27",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
# Add any git dependencies here
dev = ["package-name @ git@github.com:nestorcolt/cognition-core.git"]

[project.scripts]
cognition = "cognition.main:run"
run_crew = "cognition.main:run"
train = "cognition.main:train"
replay = "cognition.main:replay"
test = "cognition.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.setuptools.dynamic]
version = { attr = "cognition.__version__" }

[tool.hatch.version]
path = "cognition/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
