[project]
name = "cognition"
dynamic = ["version"]
description = "Wrapper agent for crewai - Enables dynamic tooling, configuration, and more"
authors = [{ name = "Nestor Colt", email = "nestor.colt@gmail.com" }]
requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
# Add any git dependencies here
dev = ["cognition-core @ file:///home/iamroot/dev/cognition-core"]

[project.scripts]
cognition = "cognition.main:run"
run_crew = "cognition.main:run"
train = "cognition.main:train"
replay = "cognition.main:replay"
test = "cognition.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.setuptools.dynamic]
version = { attr = "cognition.__version__" }

[tool.hatch.version]
path = "src/cognition/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cognition"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
